# tutor_ai_bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: config_reader.py  llm.py  main.py  prompts.py
