[tool.poetry]
name = "ru-tutor-ai-bot"
version = "0.1.0"
description = ""
authors = ["Aleksandr <gggols32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.59.8"
python-dotenv = "^1.0.1"
aiogram = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
